--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,11 @@
-```{r, echo = FALSE, fig.align='center', out.width=300, out.height=300}
-knitr::include_graphics("/Users/carlo.manenti/OneDrive - Htechnopole/carlo/RESEARCH_PROJECTS/PACKAGES/package_scops/scOps.png")
+---
+output:
+  md_document:
+    variant: markdown_github
+---
+
+```{r, image, echo = FALSE, fig.align='center', out.width=300, out.height=300}
+knitr::include_graphics("/Users/carlo.manenti/OneDrive - Htechnopole/carlo/RESEARCH_PROJECTS/PACKAGES/davilalab/scOps/scOps.png")
 ```
 
 ## A package for single-cell operational representations.
