--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,16 @@ knitr::include_graphics("/Users/carlo.manenti/OneDrive - Htechnopole/carlo/RESEA
 
 scOps comes in both Python and R. Please select the language (and so the repository branch) that best suites your need, since the implementation is virtually identical. In both cases we use standard objects to store the representations, *AnnData* or a *SingleCellExperiment* object, respectively.
 
+**R installation**
+
+`remotes::install_github("https://github.com/davilavelderrainlab/scOps/tree/main", subdir = "R_version1.0.0")`
+
+**Python installation**
+
+`pip install git+https://github.com/davilavelderrainlab/scOps.git#subdirectory=Python_version1.0.0`
+
+------------------------------------------------------------------------
+
 ### scOps representations: BOGs, Signatures and Profiles.
 
 scOps offers three main types of representations: Bag Of Genes, Profiles and Signatures.
