easy install commands for both R and Python versions

--- a/Python_version1.0.0/README.Rmd
+++ b/Python_version1.0.0/README.Rmd
@@ -8,7 +8,6 @@ output:
 knitr::include_graphics("/Users/carlo.manenti/OneDrive - Htechnopole/carlo/RESEARCH_PROJECTS/PACKAGES/davilalab/scOps/scOps.png")
 ```
 
-
 ## A package for single-cell operational representations.
 
 \n
@@ -18,17 +17,23 @@ knitr::include_graphics("/Users/carlo.manenti/OneDrive - Htechnopole/carlo/RESEA
 
 scOps comes in both Python and R. Please select the language (and so the repository branch) that best suites your need, since the implementation is virtually identical. In both cases we use standard objects to store the representations, *AnnData* or a *SingleCellExperiment* object, respectively.
 
-To install scOps for R please use `pip install git+https:<.Python_version1.0.0.>` specifying the URL of Python_version1.0.0. Or download the Python_version1.0.0 folder and use `pip install .` after moving inside that folder. 
+**Python installation**
+
+pip install git+<https://github.com/davilavelderrainlab/scOps.git#subdirectory=Python_version1.0.0>
+
+------------------------------------------------------------------------
 
 ### scOps representations: BOGs, Signatures and Profiles.
 
 scOps offers three main types of representations: Bag Of Genes, Profiles and Signatures.
 
--   ***Bag Of Genes*** **(BOGs)** can be obtained via  `scOps.compute.BOGs()` (*Python*); They are the differentially expressed genes of a cell type/condition, with respect to all the others.
+-   ***Bag Of Genes*** **(BOGs)** can be obtained via `scOps.compute.BOGs()` (*Python*); They are the differentially expressed genes of a cell type/condition, with respect to all the others.
 
 -   ***Signatures*** can be obtained via `scOps.compute.Signatures()` (*Python*); As the name suggests, this representation highlights the most distinctive features of each cell type/condition. Higher (lower) scores correspond to preferentially expressed (down regulated) features.
 
 -   ***Profiles*** can be obtained via `scOps.compute.Profiles()` (*Python*); They represent the average transcriptome of a given cell type/condition by averaging together the counts for each gene.
+
+------------------------------------------------------------------------
 
 ### scOps maintenance.
 
