--- a/R_version1.0.0/README.Rmd
+++ b/R_version1.0.0/README.Rmd
@@ -17,7 +17,11 @@ knitr::include_graphics("/Users/carlo.manenti/OneDrive - Htechnopole/carlo/RESEA
 
 scOps comes in both Python and R. Please select the language (and so the repository branch) that best suites your need, since the implementation is virtually identical. In both cases we use standard objects to store the representations, *AnnData* or a *SingleCellExperiment* object, respectively.
 
-To install scOps for R please use `devtools::install()` specifying the branch with \@ Or download the R_version1.0.0 folder and use `install.packages(path_to_R_version1.0.0, repos = NULL, type="source")`
+**R installation**
+
+`remotes::install_github("https://github.com/davilavelderrainlab/scOps/tree/main", subdir = "R_version1.0.0")`
+
+------------------------------------------------------------------------
 
 ### scOps representations: BOGs, Signatures and Profiles.
 
@@ -28,6 +32,8 @@ scOps offers three main types of representations: Bag Of Genes, Profiles and Sig
 -   ***Signatures*** can be obtained via `computeSignatures()` (*R*); As the name suggests, this representation highlights the most distinctive features of each cell type/condition. Higher (lower) scores correspond to preferentially expressed (down regulated) features.
 
 -   ***Profiles*** can be obtained via `computeProfiles()` (*R*); They represent the average transcriptome of a given cell type/condition by averaging together the counts for each gene.
+
+------------------------------------------------------------------------
 
 ### scOps maintenance.
 
